--- a/templates/webpage.html
+++ b/templates/webpage.html
@@ -20,7 +20,7 @@
   <section id="section1">
     <h2>소개글</h2>
     <p>HTML과 CSS를 사용하여 만들어봤습니다..이미지 넣기도 도전..!</p>
-    <img src="{{ url_for('static', filename='image.png') }}" alt="cute" width="400">
+    <img src="{{ url_for('static', filename='cute.png') }}" alt="cute" width="400">
   </section>
 
   <!-- 본문 섹션 2 -->
